	* Consolidated the MODULEPATH list code to one spot
	* Included another modulefile which adds $HOME to the *PATH hierarchy
	* Wrapped the Tcl hash array code into a more convenient form - MHash
	* Put all hash arrays in the MHash form and removed crufty code
	* Changed the global rc file name to modulerc
	* Let the path separator "/" be dependent on the system

****************************   Release 3.2 ******************************
Modules 3.2.7
Jul 30, 2009				R.K. Owen (rk@owen.sj.ca.us)
	* Have init/bash export the module function (thanks to Roy Dragseth)
	* Fixed swap bug when prepending or appending multiple times
	  (fix thanks to Gavin Walker), added tests for same.
	* Have purge remove loaded modules in reverse order
	  (patch contributed by carriees)
	* Added a batch of patches from Gerrit Renker
	  - Goes through each of the two manpages, bringing them up to date.
	  - Fix an error in configure.ac caused by misspelling
	  - Fix typos in help messages and source-code comments
	  - Fix the setup of $MODULESPATH to not have a trailing ':'
	  - Fix segmentation violation occurring when the shelltype is absent
	  - Fix a condition where 'make uninstall' does not cleanse a directory
	  - Fix a build problem which set the executable bit on 'data' files
	  - Cleans up noise in '.modulespath' file
	  - Replaces external sed filter script with internal Makefile.am rule
	  - Adds missing 'zsh' case in etc/global
	  - simplify (t)csh initialisation
	  - Add bash auto-completion for the 'module' command
	  - Adds new 'chdir' modulefile command (sets cwd on module load)

Modules 3.2.6
Oct 29, 2007				R.K. Owen (rk@owen.sj.ca.us)
	* Fixed the locate_module.c:realloc() calls which didn't properly
	  take the element size into account (Fix thanks to Ron Isaacson).
	* Fixed some valgrind errors found and resolved by Alan Morris.
	* Skip .git version control dirs in modulefile dirs.

Modules 3.2.5
Feb 14, 2007				R.K. Owen (rk@owen.sj.ca.us)