@@ -1,0 +1,26 @@
+#%Module1.0#####################################################################
+##
+## notavail modulefile
+##
+## @configure_input@
+##
+proc ModulesHelp { } {
+        global version
+
+	puts stderr "\tThis module does nothing but alert the user"
+	puts stderr "\tthat the [module-info name] module is not available"
+        puts stderr "\n\tVersion $version\n"
+}
+
+module-whatis	"Notifies user that module is not available."
+
+# for Tcl script use only
+set     version      "@VERSION@"
+
+set curMod [module-info name]
+if { [ module-info mode load ] } {
+    puts stderr	"Note: '$curMod' is not available for [uname sysname]."
+}
+
+break
+
