@@ -25,6 +25,7 @@ modules 3.3.0
 	* Put all hash arrays in the MHash form and removed crufty code
 	* Changed the global rc file name to modulerc
 	* Let the path separator "/" be dependent on the system
+	* Added the "notavail" modulefile (as shown in man page)
 
 ****************************   Release 3.2 ******************************
 Modules 3.2.7
